# LinuxComputerGraphic

./: CMakeLists.txt  README.md  build.sh  main.cpp
asset/: BlenderParser.cpp  BlenderParser.h  BlenederObjParser.cpp  BlenederObjParser.h  CMakeLists.txt  main.cpp  utility.cpp  utility.h
display/: CMakeLists.txt
display/include/: display.h
display/src/: display.cpp
geometry/: CMakeLists.txt  light.cpp  light.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  triangle.h  vector.cpp  vector.h
